2012-06-17  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, audio-sdl.c:
	remove unsigned audio except for 8 bit

	* lua/lua-akfavatar-prg.c: use Logo on start-screen

2012-06-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c: renamed from avatar.c

	* audio-sdl.c: renamed from avatar-audio.c

	* audio-dummy.c: new file

	* akfavatar.h, avatar-sdl.c (avt_set_error): new function

	* avatar-sdl.c (avt_wait_event): new function
	audio-sdl.c (avt_wait_audio_end): adapted

	* avtpalette.c: use libc instead of SDL

2012-06-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c: support for 24 and 32 bit audio data

2012-06-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_load_raw_audio_data, avt_add_raw_audio_data):
	only store the endianness when it is not the native one

2012-06-11  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar-audio (avt_finalize_raw_audio):
	new function

2012-06-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_load_wave): native support for wave files

	* avatar-audio.c (avt_load_sdl_wave): new function

2012-06-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_add_raw_audio_data):
	double capacity when it's too low

	* avtvorbis.c (load_vorbis): detect needed capacity

2012-06-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (avt_load_pcm, avt_load_wave, avt_load_au)
	(avt_load_audio_rw): rewritten

	* akfavatar.h, avatar-audio.c (avt_set_raw_audio_capacity):
	new function

2012-05-27  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-audio.c (fill_audio, avt_stop_audio, avt_quit_audio)
	(avt_play_audio): make soundpos an offset instead of a pointer

	* avatar-audio.c (avt_add_raw_audio_data):
	allow adding data while playing

	* avtvorbis.c: parameters for playing while loading

	* lua/lua-avt.c: parameters for playing while|after loading
	lua/akfavatar-vorbis.c: adapted
